# brightedge-crawler

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: classifier.py  extractor.py  fetcher.py  main.py  robots.py
deploy/: cloud-run.md
docs/: 02-design.md  03-poc-plan.md
sample_outputs/: amazon.json  cnn.json  rei.json
tests/: fixtures.py  smoke.py  test_classifier.py  test_extractor.py  test_partial.py  test_robots.py
