[project]
name = "brightedge-crawler"
version = "0.1.0"
description = "URL metadata + topic classification service for the BrightEdge Scale assignment."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [".venv", "sample_outputs"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "RUF",  # ruff-native
]
ignore = [
    "E501",  # line too long (we keep some long URLs / strings)
    "B008",  # FastAPI Query/Depends in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]
